--- a/kubernetes/osfamilymap.yaml
+++ b/kubernetes/osfamilymap.yaml
@@ -100,11 +100,13 @@ Windows:
     binary: C:\\kubernetes
     source: C:\\temp\\kubernetes
   client:
+    version: 1.19.0
     check: systeminfo
     pkg:
-      name: kubectl.exe
+      name: kubernetes-cli         # choco
+      use_upstream: package
       binary:
-        source_hash: '974d351e7e0ad1e1ed0901770d65188e8d4c4cdd2494474d14a2b2c325751293'
+        source_hash: '6ec32a8a62b69363a524c4f8db765ff4bd16ea7e5b0eb04aa5a667f8653eda18c357a97513d9e12f0ba1612516acb150deffb6e3608633c62b97a15b6efa7cc0'
   node:
     pkg:
       use_upstream: archive
