--- a/kitchen.yml
+++ b/kitchen.yml
@@ -283,3 +283,20 @@ suites:
     verifier:
       inspec_tests:
         - path: test/integration/redhat
+  - name: arch
+    provisioner:
+      state_top:
+        base:
+          '*':
+            # kubernetes.clean
+            - kubernetes
+      pillars:
+        top.sls:
+          base:
+            '*':
+              - kubernetes
+      pillars_from_files:
+        kubernetes.sls: test/salt/pillar/default.sls
+    verifier:
+      inspec_tests:
+        - path: test/integration/arch
