--- a/kubernetes/osfamilymap.yaml
+++ b/kubernetes/osfamilymap.yaml
@@ -98,6 +98,7 @@ Windows:
       suffix: ''
       use_upstream: package
       binary:
+        options: '--strip-components=2'   # windows
         source_hash: '6ec32a8a62b69363a524c4f8db765ff4bd16ea7e5b0eb04aa5a667f8653eda18c357a97513d9e12f0ba1612516acb150deffb6e3608633c62b97a15b6efa7cc0'
   server: {}
   node:
@@ -106,7 +107,9 @@ Windows:
     pkg:
       use_upstream: archive
       archive:
+        options: '--strip-components=2'   # windows
         source_hash: '587651158c9999e64e06186ef2e65fe14d46ffdae28c5d8ee6261193bfe4967717f997ebe13857fa1893bbf492e1cc1f816bce86a94c6df9b7a0264848391397'  # noqa 204
+
   sigs:
     pkg:
       kind:
@@ -135,7 +138,7 @@ Windows:
         suffix: zip
         archive:
           source_hash: '07f276d1f1396a634881598fd8cd6532ed25325048081defccdb54512b6037f4'
-          options: ''
+          options: ''  # zipfile
       k3s:
         use_upstream: false   # no windows binary
       kubectx:
@@ -154,7 +157,7 @@ Windows:
         suffix: zip
         arch: ''  # noarch
         archive:
-          options: ''
+          options: ''  # zipfile
       cue:
         suffix: zip
         archive:
@@ -229,6 +232,7 @@ MacOS:
         suffix: zip
         archive:
           source_hash: 'f3ac074585bd3afbf529da7e37e5e8844150504fdb420f0cc930f31e766ce24a'
+          options: '' # zipfile
       linkerd2:
         binary:
           source_hash: '1adc9c53fe968383020b6c4047d42452754e05bc90d1a65f2261d729c6fab4df'
